--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
+altgraph==0.17.3
 certifi==2022.9.24
 easygui==0.98.3
 ezdxf==0.18.1
+future==0.18.2
+pefile==2022.5.30
+pyinstaller==5.6
+pyinstaller-hooks-contrib==2022.10
 pyparsing==3.0.9
 pyproj==3.4.0
 PySide2==5.15.2.1
+pywin32-ctypes==0.2.0
 shiboken2==5.15.2.1
 simplekml==1.3.6
 typing_extensions==4.4.0
